--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -3,7 +3,9 @@
 @import lib/reset
 @import lib/sprite
 @import lib/svgfont
-// @import lib/slick
+@import lib/slick
+@import variables
 
 @import common
+@import header
 @import main
