--- a/src/sass/_common.sass
+++ b/src/sass/_common.sass
@@ -28,9 +28,37 @@
 // =book
 // 	font-family: "book", Arial, sans-serif
 
+// -------- fonts -------
+
++font(Lato-Black, Lato-Black)
+=lb
+	font-family: "Lato-Black", Arial, sans-serif
+
++font(Lato, Lato-Regular) 
+=lr
+	font-family: 'Lato', Arial, sans-serif
+
++font(RobotoSlab-Bold, RobotoSlab-Bold)
+=rb
+	font-family: 'RobotoSlab-Bold', Arial, sans-serif
+
+.in
+	margin: 0 auto
+	padding: 0 5px
+	max-width: 1080px
+	+clr
+
+%in
+	@extend .in
+
+// body style
 body
-	font-family: Arial, sans-serif
-	font-size: 12px
+	+lr
+	font-size: 19px
 	line-height: 1.4
 	
+a
+	color: inherit
+	text-decoration: none
+
 // common blocks
