--- a/src/sass/lib/_reset.sass
+++ b/src/sass/lib/_reset.sass
@@ -19,6 +19,12 @@ input[type="email"],
 input[type="tel"],
 textarea
     -webkit-appearance: none
+input[type="submit"],
+button
+    cursor: pointer
+    &::-moz-focus-inner
+        padding: 0
+        border: 0
 textarea
     overflow: auto
 input, button
