--- a/src/sass/lib/_svgfont.sass
+++ b/src/sass/lib/_svgfont.sass
@@ -5,8 +5,10 @@
 	font-weight: normal
 	font-style: normal
 
-$icon-sepa: "\EA01"
-$icon-skrill: "\EA02"
+$icon-logo: "\EA01"
+$icon-mouse: "\EA02"
+$icon-play: "\EA03"
+$icon-user: "\EA04"
 
 
 %icon
@@ -23,7 +25,11 @@ $icon-skrill: "\EA02"
 	@extend %icon
 	display: inline-block
 
-.icon-sepa:before
-	content: $icon-sepa
-.icon-skrill:before
-	content: $icon-skrill
+.icon-logo:before
+	content: $icon-logo
+.icon-mouse:before
+	content: $icon-mouse
+.icon-play:before
+	content: $icon-play
+.icon-user:before
+	content: $icon-user
