--- a/src/sass/lib/_reset.sass
+++ b/src/sass/lib/_reset.sass
@@ -25,6 +25,8 @@ button
     &::-moz-focus-inner
         padding: 0
         border: 0
+    &:active
+        color: inherit
 textarea
     overflow: auto
 input, button
