--- a/src/partials/header-home.html
+++ b/src/partials/header-home.html
@@ -3,13 +3,10 @@
 	<div class="header__in">
 		<div class="header__left">
 			<!-- lang -->
-			<a href="#" class="lang"><span>UKR</span></a>
-			<!-- play -->
-			<div class="play">
-				<a href="#" class="play__btn">
-					<i class="icon icon-play"></i>
-				</a>
-			</div>
+			<ul class="lang">
+				<li><a href="#"><span>EN</span></a></li>
+				<li><a href="#"><span>UKR</span></a></li>
+			</ul>
 			<!-- login -->
 			<div class="login js-login">
 				<button type="button" class="login__btn js-btn-login">
