--- a/src/sass/_common.sass
+++ b/src/sass/_common.sass
@@ -46,7 +46,7 @@
 .in
 	margin: 0 auto
 	padding: 0 15px
-	max-width: 1180px
+	max-width: 1253px
 	+clr
 
 %in
@@ -66,6 +66,7 @@ body
 	+lr
 	font-size: 19px
 	line-height: 1.4
+	background: $dark-gray
 	
 a
 	color: inherit
