--- a/src/sass/lib/_svgfont.sass
+++ b/src/sass/lib/_svgfont.sass
@@ -9,6 +9,10 @@ $icon-logo: "\EA01"
 $icon-mouse: "\EA02"
 $icon-play: "\EA03"
 $icon-user: "\EA04"
+$icon-inst: "\EA05"
+$icon-f: "\EA06"
+$icon-vk: "\EA07"
+$icon-p: "\EA08"
 
 
 %icon
@@ -33,3 +37,11 @@ $icon-user: "\EA04"
 	content: $icon-play
 .icon-user:before
 	content: $icon-user
+.icon-inst:before
+	content: $icon-inst
+.icon-f:before
+	content: $icon-f
+.icon-vk:before
+	content: $icon-vk
+.icon-p:before
+	content: $icon-p
