--- a/src/sass/_main.sass
+++ b/src/sass/_main.sass
@@ -1,19 +1,215 @@
 // top
 .top
-	padding-bottom: 50px
+	padding-bottom: 56px
 	background: url(../img/svg/top-bg-right.svg) no-repeat 96% 73%, url(../img/svg/top-bg-left.svg) no-repeat 10% 77%, $yellow
 	&__in
 		position: relative
 		margin: 4.2% auto 0
 		max-width: 790px
 		text-align: center
-		.mouse
-			margin-top: 64px
+		.video
+			margin-top: 60px
 
 // price
 .price
 	position: relative
 	text-align: center
-	background: $yellow
+	background: url(../img/svg/price-bg-right.svg) no-repeat 95% 35%, url(../img/svg/price-bg-left.svg) no-repeat 9% 58%, $yellow
+	&:before
+		position: absolute
+		content: ''
+		left: 50%
+		bottom: -103px
+		margin-left: -103px
+		+arr(206,103,$yellow,b)
+	&:after
+		position: absolute
+		content: ''
+		left: 50%
+		bottom: -90px
+		margin-left: -36px
+		+svg(price-arr,72,55)
+	.circle
+		position: absolute
+		top: -76px
+		left: 50%
+		margin-left: -76px
+	.title
+		margin-bottom: 76px
+	.time-day,
+	.time,
+	.cost
+		min-width: 83px
+		text-align: left
+		font-size: 19px
+	.time
+		width: 220px
+		text-align: center
+	.cost
+		padding-left: 22px
+		width: 105px
+	&__in
+		position: relative
+		padding: 160px 15px
+		@extend %cent
+		overflow: hidden
+	&__text
+		margin-bottom: 20px
+		letter-spacing: .05em
+	&__row
+		margin-top: 10px
+		padding-left: 30px
+		font-size: 0
+	&__btn
+		margin-top: 44px
+	&__foot
+		margin-top: 60px
+		+lb
+		font-size: 24px
+		line-height: 1.2
+
+// course
+.course
+	padding: 188px 0 105px
+	color: $white
+	text-align: center
+	.title
+		margin-bottom: 80px
+	.wrap
+		text-align: left
+	.title-small
+		margin: 86px 0 55px
 	&__in
 		@extend %cent
+
+// video
+.video
+	&__btn
+		font-size: 0
+		background: transparent
+		.icon
+			font-size: 60px
+
+// steps
+.steps
+	position: relative
+	width: 353px
+	height: 353px
+	border: 10px solid rgba($white, .1)
+	border-radius: 50%
+	vertical-align: top
+	display: inline-block
+	&:before,
+	&:after
+		position: absolute
+		content: ''
+		top: 50%
+		left: 50%
+		transform: translate(-50%,-50%)
+		border-radius: 50%
+	&:before
+		height: 112px
+		width: 112px
+		background: $yellow
+	&:after
+		height: 157px
+		width: 157px
+		border: 10px solid rgba($yellow, .3)
+	&__item
+		position: absolute
+		left: -10px
+		font-size: 22px
+		+lb
+		opacity: .5
+		&:before
+			position: absolute
+			content: ''
+			height: 48px
+			width: 48px
+			border: 10px solid rgba($white, .1)
+			border-radius: 50%
+		&:first-child
+			top: -17px
+			&:before
+				bottom: -54px
+				right: -28px
+		&:nth-child(2)
+			top: -17px
+			&:before
+				bottom: -54px
+				left: -28px
+		&:nth-child(3)
+			bottom: -17px
+			&:before
+				top: -56px
+				right: -28px
+		&:nth-child(4)
+			bottom: -17px
+			&:before
+				top: -54px
+				left: -28px
+		&:nth-child(even)
+			left: auto
+			right: -10px
+	&__text
+		letter-spacing: .05em
+
+// graph
+.graph
+	text-align: center
+	background: $yellow
+	.wrap
+		margin: 78px 0 75px
+	&__in
+		position: relative
+		padding: 178px 15px 120px
+		@extend %cent
+		&:before,
+		&:after
+			position: absolute
+			content: ''
+			left: 50%
+			transform: translateX(-50%)
+		&:before
+			top: -102px
+			width: 204px
+			height: 204px
+			border-radius: 50%
+			background: $dark-gray
+		&:after
+			top: 26px
+			+svg(graph-arr,484,44)
+
+// contacts
+.contacts
+	background: $yellow
+	+clr
+	&__col
+		float: left
+		width: 50%
+	&__in
+		padding: 35px 20px 68px 136px
+		max-width: 510px
+
+// map
+.map
+	width: 100%
+	height: 796px
+	.gm-style-cc
+		display: none
+	.gm-style
+		a
+			display: none !important
+		div
+			background-color: transparent !important
+			box-shadow: none !important
+			border: none !important
+	.gm-style-iw
+		top: -73px !important
+		left: 37px !important
+		color: $white
+		letter-spacing: 0.1em
+		font-size: 24px
+		+lb
+		& + div
+			display: none
