--- a/src/sass/_footer.sass
+++ b/src/sass/_footer.sass
@@ -6,11 +6,13 @@
 	font-size: 8px
 	&__in
 		@extend %in
+		padding-left: 123px
+		padding-right: 123px
 
 // copy
 .copy
 	float: right
-	width: 100px
+	width: 115px
 	& + .dev
 		margin-left: 20px
 
