--- a/src/sass/lib/_svgfont.sass
+++ b/src/sass/lib/_svgfont.sass
@@ -13,6 +13,8 @@ $icon-inst: "\EA05"
 $icon-f: "\EA06"
 $icon-vk: "\EA07"
 $icon-p: "\EA08"
+$icon-slider-next: "\EA09"
+$icon-slider-prev: "\EA0A"
 
 
 %icon
@@ -45,3 +47,7 @@ $icon-p: "\EA08"
 	content: $icon-vk
 .icon-p:before
 	content: $icon-p
+.icon-slider-next:before
+	content: $icon-slider-next
+.icon-slider-prev:before
+	content: $icon-slider-prev
