--- a/src/sass/_header.sass
+++ b/src/sass/_header.sass
@@ -113,6 +113,7 @@
 		visibility: hidden
 		z-index: -1
 		opacity: 0
+		padding: 165px 0
 		will-change: opacity
 		transform: translate3d(0,0,0)
 		transition: opacity .3s
@@ -128,8 +129,9 @@
 			bottom: 0
 			margin: 0
 			color: $black
+			+lbd
 			line-height: 1.3
-			font-size: 16px
+			font-size: 30px
 			overflow: auto
 			text-align: center
 			background: $white
@@ -141,10 +143,29 @@
 			width: 35px
 			height: 5px
 			background: $black
+			+r(768)
+				left: 50%
+				top: 135px
+				bottom: auto
+				margin-left: calc(-35px / 2)
 		li
 			display: block
 			&.is-active
 				+lb
+			&:last-child
+				position: relative
+				&:after
+					position: absolute
+					content: ''
+					left: 50%
+					bottom: -35px
+					margin-left: calc(-35px / 2)
+					width: 35px
+					height: 5px
+					background: $black
+					display: none
+					+r(768)
+						display: block
 	a
 		transition: font-weight .2s, font-family .2s
 		&:hover
