--- a/src/sass/_footer.sass
+++ b/src/sass/_footer.sass
@@ -3,7 +3,7 @@
 	margin-top: -54px
 	padding: 15px 0 17px
 	color: $white
-	font-size: 8px
+	font-size: 12px
 	&__in
 		@extend %in
 		padding-left: 123px
@@ -15,7 +15,8 @@
 
 // copy
 .copy
-	float: right
+	float: left
+	margin-top: 10px
 	width: 115px
 	+r(768)
 		float: left
