--- a/src/sass/lib/_svgfont.sass
+++ b/src/sass/lib/_svgfont.sass
@@ -15,6 +15,9 @@ $icon-vk: "\EA07"
 $icon-p: "\EA08"
 $icon-slider-next: "\EA09"
 $icon-slider-prev: "\EA0A"
+$icon-close: "\EA0B"
+$icon-phone: "\EA0C"
+$icon-key: "\EA0D"
 
 
 %icon
@@ -51,3 +54,9 @@ $icon-slider-prev: "\EA0A"
 	content: $icon-slider-next
 .icon-slider-prev:before
 	content: $icon-slider-prev
+.icon-close:before
+	content: $icon-close
+.icon-phone:before
+	content: $icon-phone
+.icon-key:before
+	content: $icon-key
