--- a/src/partials/header-home.html
+++ b/src/partials/header-home.html
@@ -5,28 +5,47 @@
 			<!-- lang -->
 			<ul class="lang">
 				<li><a href="#"><span>EN</span></a></li>
-				<li><a href="#"><span>UKR</span></a></li>
+				<li><a href="#"><span>UK</span></a></li>
 			</ul>
 			<!-- login -->
 			<div class="login js-login">
 				<button type="button" class="login__btn js-btn-login">
 					<i class="icon icon-user"></i>
 				</button>
-				<div class="login__form js-login-form">
-					<form action="">
-						<div class="login__row">
-							<label for="login" class="login__label">Логин</label>
-							<input type="text" name="login" id="login" class="input">
+				<!-- popup --> 
+				<div class="popup js-popup">
+					<div class="popup__in">
+						<button class="popup__close js-popup-close"><i class="icon icon-close"></i></button>
+						<div class="popup__wrap">
+							<h3 class="popup__title">Вход <br>в личный кабинет </h3>
+							<form action="" class="popup__form">
+								<div class="field">
+									<label for="phone" class="field__label">
+										<i class="icon icon-phone"></i>
+									</label>
+									<input type="text" name="phone" id="phone" class="input js-input-phone">
+								</div>
+								<div class="field">
+									<label for="password" class="field__label">
+										<i class="icon icon-key"></i>
+									</label>
+									<input type="passwod" name="password" id="password" class="input js-input-password">
+								</div>
+								<div class="popup__check">
+									<label class="checkbox">
+										<input type="checkbox" checked>
+										<span>Запомнить меня</span>
+									</label>
+								</div>
+								<div class="popup__butt">
+									<button class="btn" type="submit">ВОЙТИ</button>
+								</div>
+								<div class="popup__chenge">
+									<a href="#">Изменить пароль</a>
+								</div>
+							</form>
 						</div>
-						<div class="login__row">
-							<label for="password" class="login__label">Пароль</label>
-							<input type="password" name="password" id="password" class="input">
-						</div>
-						<div class="login__bott">
-							<button class="btn" type="submit">ВОЙТИ</button>
-							<a href="#" class="forgot"><span>Я забыл пароль</span>:(</a>
-						</div>
-					</form>
+					</div>
 				</div>
 			</div>
 		</div>
