--- a/src/partials/header-home.html
+++ b/src/partials/header-home.html
@@ -1,5 +1,5 @@
 <!-- header -->
-<header class="header is-home">
+<header class="header is-home js-header">
 	<div class="header__in">
 		<div class="header__left">
 			<!-- lang -->
