--- a/src/sass/_block.sass
+++ b/src/sass/_block.sass
@@ -250,6 +250,7 @@
 	background-size: cover
 	background-repeat: no-repeat
 	background-position: 50% 0
+	z-index: 2
 	.title-big
 		& + p
 			margin-top: 7px
@@ -346,3 +347,4 @@
 			text-align: left
 			br
 				display: none
+
