--- a/src/sass/_footer.sass
+++ b/src/sass/_footer.sass
@@ -1,9 +1,11 @@
 // footer
 .footer
+	position: relative
 	margin-top: -54px
 	padding: 15px 0 17px
 	color: $white
 	font-size: 12px
+	z-index: 2
 	&__in
 		@extend %in
 		padding-left: 123px
